# CryptographyAttacksImplementation

./: README.md
BlockCipherModsImpl/: CMakeLists.txt  README.md
BlockCipherModsImpl/src/: CMakeLists.txt  blockcipher.cpp
BlockCipherModsImpl/src/include/: blockcipher.hpp
BlockCipherModsImpl/tests/: CMakeLists.txt  tests.hpp  unit-modes.cpp  validate.cpp
ECBDecr/: CMakeLists.txt  README.md  ecbdecryption.cpp
EncryptionModeOracle/: CMakeLists.txt  README.md  encryprionmodeoracle.cpp
EncryptionModeOracle/include/: base64.hpp
NotSoOTPDecryption/: .gitignore  CMakeLists.txt  CTs.json  README.md  otp.cpp
StreamCipherAuthentication/: CMakeLists.txt  README.md  streamIntegrity.cpp
sha1mac/: README.md  lab9.py  sha1.py
